Ajout du contenu a la page d'accueil

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     </head>
 
     <body>
-    	Hello World !!!
+    	<h1>Hello World !!!</h1>
+    	<h2>Voici quelques citations</h2>
+    	<p>Socrate: 
+    		<br> Tout ce que je sais, c'est que je ne sais rien, tandis que les autres croient savoir ce qu'ils ne savent pas.
+    	</p>
+    	<p>Socrate:
+    		<br>L'homme doit s'élever au-dessus de la Terre - aux limites de l'atmosphère et au-delà - ainsi seulement pourra-t-il comprendre tout à fait le monde dans lequel il vit.
+    	</p>
     </body>
 </html>
