--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
     <body>
     	<h1>Hello World !!!</h1>
-    	<h2>Voici quelques citations</h2>
+    	<h2>Voici quelques citations:</h2>
     	<p> "Tout ce que je sais, c'est que je ne sais rien, tandis que les autres croient savoir ce qu'ils ne savent pas."
-    		<br>Socrate
+    		<br><span class="auteur">Socrate</span>
     	</p>
     	<p>"L'homme doit s'élever au-dessus de la Terre - aux limites de l'atmosphère et au-delà - ainsi seulement pourra-t-il comprendre tout à fait le monde dans lequel il vit."
-    		<br>Socrate
+    		<br><span class="auteur">Socrate</span>
     	</p>
     </body>
 </html>
